--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "test": "ng test",
     "jsonServer": "json-server --watch mock_db/db.json",
     "compodoc": "compodoc -p tsconfig.json -o -s",
-    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/crm-betclic/stats.json"
+    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/crm-betclic/stats.json",
+    "dev:ssr": "ng run crm-betclic:serve-ssr",
+    "serve:ssr": "node dist/crm-betclic/server/main.js",
+    "build:ssr": "ng build && ng run crm-betclic:server",
+    "prerender": "ng run crm-betclic:prerender"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +26,7 @@
     "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/platform-server": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -32,10 +37,12 @@
     "@ngrx/entity": "^12.4.0",
     "@ngrx/store": "^12.4.0",
     "@ngrx/store-devtools": "^12.4.0",
+    "@nguniversal/express-engine": "^12.1.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.0",
     "dayjs": "^1.10.6",
+    "express": "^4.15.2",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -46,6 +53,8 @@
     "@angular/cli": "~12.2.3",
     "@angular/compiler-cli": "~12.2.0",
     "@compodoc/compodoc": "^1.1.14",
+    "@nguniversal/builders": "^12.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
