--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "localstorage-polyfill": "^1.0.1",
     "typescript": "~4.3.5",
     "webpack-bundle-analyzer": "^4.4.2"
   }
