Ajout ngx-translate

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^4.5.0",
     "dayjs": "^1.10.6",
     "moment": "^2.29.1",
